[AVRO-2663]